--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <img src="assets/images/icon-menu.svg" alt="menu open" class="menu-open" id="menuOpen">
     <div class="transparent-menu" id="transparentMenu">
-      <div class="solid-menu">
+      <div class="solid-menu" id="solidMenu">
         <img src="assets/images/icon-menu-close.svg" alt="menu close" class="menu-close" id="menuClose">
         <nav class="mobile-nav" id="mobileNav">
           <a href="">Home</a>
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="new">
-        <h1>New</h1>
+        <h2>New</h2>
         <a href="">Hydrogen VS Electric Cars</a>
         <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         <hr>
@@ -69,7 +69,7 @@
       <div class="gr-1">
         <img src="assets/images/image-retro-pcs.jpg" alt="retro pc">
         <div class="text">
-          <h1>01</h1>
+          <h2>01</h2>
           <a>Reviving Retro PCs</a>
           <p>What happens when old PCs are given modern upgrades?</p>
         </div>
@@ -77,7 +77,7 @@
       <div class="gr-2">
         <img src="assets/images/image-top-laptops.jpg" alt="keyboard">
         <div class="text">
-          <h1>02</h1>
+          <h2>02</h2>
           <a>Top 10 Laptops of 2022</a>
           <p>Our best picks for various needs and budgets.</p>
         </div>
@@ -85,7 +85,7 @@
       <div class="gr-3">
         <img src="assets/images/image-gaming-growth.jpg" alt="">
         <div class="text">
-          <h1>03</h1>
+          <h2>03</h2>
           <a>The Growth of Gaming</a>
           <p>How the pandemic has sparked fresh opportunities.</p>
         </div>
@@ -96,7 +96,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">boypaida</a>.
     </div>
   </footer>
   
@@ -104,14 +104,21 @@
     let menuOpen = document.getElementById('menuOpen');
     let menuClose = document.getElementById('menuClose');
     let transparentMenu = document.getElementById('transparentMenu');
+    let solidMenu = document.getElementById('solidMenu')
 
     menuOpen.onclick = function() {
-      transparentMenu.style.display = 'block';
-    }
+  transparentMenu.style.display = 'block';
+  setTimeout(function() {
+    transparentMenu.classList.remove('menu-closed');
+  }, 0);
+};
 
-    menuClose.onclick = function() {
-      transparentMenu.style.display = 'none';
-    }
+menuClose.onclick = function() {
+  transparentMenu.classList.add('menu-closed');
+  setTimeout(function() {
+    transparentMenu.style.display = 'none';
+  }, 500);
+};
   </script>
 </body>
 </html>
